# Voyager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  remake.sh  run.sh  update.sh
config/: base.config.json  client.config.json  server.config.json
ext/imgui/: imgui_impl_glfw_gl3.cpp
ext/sfml/: CMakeCache.txt  Makefile  cmake_install.cmake
ext/sfml/lib/: libsfml-audio.2.4.2.dylib  libsfml-graphics.2.4.2.dylib  libsfml-network.2.4.2.dylib  libsfml-system.2.4.2.dylib  libsfml-window.2.4.2.dylib
ext/sfml/src/SFML/: Makefile  cmake_install.cmake
ext/sfml/src/SFML/Audio/: Makefile  cmake_install.cmake
ext/sfml/src/SFML/Graphics/: Makefile  cmake_install.cmake
ext/sfml/src/SFML/Network/: Makefile  cmake_install.cmake
ext/sfml/src/SFML/System/: cmake_install.cmake
ext/sfml/src/SFML/Window/: Makefile  cmake_install.cmake
ext/sfml_src/src/SFML/System/: Makefile
resources/: hud.json  part_frag.glsl  part_vert.glsl  simple_vert.glsl  tmp_resource.json  uber.frag.glsl  uber.vert.glsl
resources/navmap/: navmap.frag.glsl  navmap.vert.glsl
resources/skybox/: skybox.frag.glsl  skybox.vert.glsl
resources/templates/: example.scene.json  example.scene.json.bak
scripts/: generate_spawn_points.py  points.json
src/: Application.cpp  Application.h  Entity.cpp  Entity.h  Hud.cpp  Hud.h  Player.cpp  Player.h  Texture.cpp  WindowManager.cpp  WindowManager.h  lab09.vcxproj  lab09.vcxproj.filters  main.cpp
src/entities/: Entity.cpp  Entity.h
src/imgui/: imgui_impl_glfw_gl3.cpp
src/utils/: MatrixStack.h  Ray.cpp  Ray.h  WindowManager.cpp  WindowManager.h
src/voyager-actors/: ActorEngine.cpp  BulletComponent.cpp  CMakeLists.txt  HelmComponent.cpp  PlayerComponent.cpp  ShipComponent.cpp  StationComponent.cpp  TurretComponent.cpp  player.cpp  ship.cpp
src/voyager-actors/ai/: AiEngine.cpp  Brain.cpp  BrainComponent.cpp  NavMap.cpp  NavMapEntity.cpp
src/voyager-actors/enemies/: Drone.cpp  Enemy.cpp  Spawner.cpp
src/voyager-actors/include/: ActorComponent.h  ActorEngine.h  BulletComponent.h  EnemyComponent.h  HelmComponent.h  PlayerComponent.h  ShipComponent.h  StationComponent.h  TurretComponent.h  player.h  ship.h
src/voyager-actors/include/ai/: AiEngine.h  Brain.h  BrainComponent.h  NavMap.h  NavMapEntity.h
src/voyager-actors/include/enemies/: Drone.h  Enemy.h  Spawner.h
src/voyager-client/: CMakeLists.txt  main.cpp
src/voyager-core/: Application.cpp  CMakeLists.txt  Component.cpp  Engine.cpp  Entity.cpp  VoyagerConfig.cpp  WindowManager.cpp
src/voyager-core/include/: All.h  Application.h  ApplicationType.h  Component.h  Engine.h  Entity.h  SceneMesh.h  VoyagerConfig.h  WindowManager.h
src/voyager-hud/: CMakeLists.txt  Hud.cpp
src/voyager-hud/include/: FPS.h  Hud.h  Image.h  PlayerInfo.h  ProgressBar.h  ShipInfo.h  Textbox.h  Widget.h
src/voyager-loader/: ApplicationMaker.cpp  CMakeLists.txt  JsonLoader.cpp  Loader.cpp  Scene.cpp  SceneLoader.cpp  VoyagerConfigLoader.cpp
src/voyager-loader/include/: ApplicationMaker.h  JsonLoader.h  Loader.h  Scene.h  SceneLoader.h  VoyagerConfigLoader.h
src/voyager-network/: CMakeLists.txt  ClientNetworkEngine.cpp  NetworkEngine.cpp  Networkable.cpp  ServerNetworkEngine.cpp
src/voyager-network/include/: ClientNetworkEngine.h  Connection.h  NetworkEngine.h  NetworkEngines.h  Networkable.h  ServerNetworkEngine.h
src/voyager-physics/: CMakeLists.txt  PhysicsComponent.cpp  PhysicsEngine.cpp
src/voyager-physics/include/: PhysicsComponent.h  PhysicsEngine.h
src/voyager-physicsDemo/: CMakeLists.txt
src/voyager-render/: CMakeLists.txt  Camera.cpp  GLDebugDrawer.cpp  ParticleSystem.cpp  RenderEngine.cpp  Renderable.cpp  Uber.cpp  ViewFrustumCulling.cpp
src/voyager-render/include/: Camera.h  GLDebugDrawer.h  ParticleSystem.h  RenderEngine.h  Renderable.h  Uber.h  VFCbox.h  VFCobj.h  VFCoct.h  ViewFrustumCulling.h
src/voyager-server/: CMakeLists.txt  main.cpp
src/voyager-utils/: Audio.cpp  BitMap.cpp  BulletToGlm.cpp  CMakeLists.txt  DebugBox.cpp  GLSL.cpp  MatrixStack.cpp  Program.cpp  Ray.cpp  Shape.cpp  Skybox.cpp  State.cpp  StateMachine.cpp  Terrain.cpp  Texture.cpp  Time.cpp  Transform.cpp  tiny_obj_loader.cpp
src/voyager-utils/include/: Audio.h  BitMap.h  BulletToGlm.h  Constants.h  DebugBox.h  GLSL.h  MatrixStack.h  Path.h  Program.h  Ray.h  Shape.h  Skybox.h  State.h  StateMachine.h  Terrain.h  Texture.h  Time.h  Transform.h  tiny_obj_loader.h
src/voyager-vfc/: CMakeLists.txt  VFCbox.cpp  VFCobj.cpp  VFCoct.cpp
src/voyager-vfc/include/: VFCbox.h  VFCobj.h  VFCoct.h
